--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接2</div>
-                        <div class="d-item-desc">使用123网盘，某些文件需要登录下载 <span class="update-time"></span></div>
+                        <div class="d-item-desc">使用123盘，下载某些文件需要登录 <span class="update-time"></span></div>
                         <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
