--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接1</div>
-                        <div class="d-item-desc">如果下载页面打开慢请点击此链接 <span class="update-time"></span></div>
+                        <div class="d-item-desc">遇到下载器错误请点击此链接 <span class="update-time"></span></div>
                         <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://pan.huang1111.cn/s/KbkVTY" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">备用链接2</div>
-                        <div class="d-item-desc">使用123盘，下载某些文件需要登录 <span class="update-time"></span></div>
+                        <div class="d-item-desc">下载某些文件需要登录 <span class="update-time"></span></div>
                         <div class="d-item-desc">可能不是最新版本 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
