--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -91,8 +91,8 @@
     <div class="doc top-right" style="position:relative;">
         <div class="doc-inner">
             <!-- <div class="second-logo"></div> -->
-            <div class="second-title">病毒库云端同步</div>
-            <div class="second-desc">自动更新病毒库，随时防范病毒。</div>
+            <div class="second-title">多种扫描方式/div>
+            <div class="second-desc">支持使用多达3个扫描引擎。</div>
         </div>
         <div class="doc-bg doc2">
             <img src="./img/zaixian.png" alt="" id="document">
