--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -91,7 +91,7 @@
     <div class="doc top-right" style="position:relative;">
         <div class="doc-inner">
             <!-- <div class="second-logo"></div> -->
-            <div class="second-title">多种扫描方式/div>
+            <div class="second-title">多种扫描方式</div>
             <div class="second-desc">支持使用多达3个扫描引擎。</div>
         </div>
         <div class="doc-bg doc2">
