--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -120,7 +120,7 @@
             <div class="second-desc">支持使用多达3个扫描引擎。</div>
         </div>
         <div class="doc-bg doc2">
-            <div id="container" ></div>
+            <div id="container" style="width: 550px; height: 400px; margin: 0 auto" ></div>
         </div>
     </div>
     </div>
