--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -117,7 +117,7 @@
         <div class="doc-inner">
             <!-- <div class="second-logo"></div> -->
             <div class="second-title">对比其他自制杀软</div>
-            <div class="second-desc">支持使用多达3个扫描引擎。</div>
+            <div class="second-desc">没有对比就没有伤害。</div>
         </div>
         <div class="doc-bg doc2">
             <div id="container" style="width: 550px; height: 400px; margin: 0 auto" ></div>
