--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -301,7 +301,7 @@ $(document).ready(function() {
             name: '未知病毒样本包',
             data: [23.3, 21.1, 20.3, 28.3]
         }, {
-            name: '脚本病毒样本',
+            name: '脚本病毒样本包',
             data: [90, 90, 30, 40]      
 	    }
    ];     
