--- a/Winget-Plus/index.html
+++ b/Winget-Plus/index.html
@@ -55,7 +55,7 @@
           <div class="col-lg-6 text order-2 order-lg-1">
             <h1>Winget++</h1>
             <p class="hero-text">更方便使用 Winget</p>
-            <div class="CTA"><a href="#features" class="btn btn-primary btn-shadow btn-gradient link-scroll">立即下载</a>
+            <div class="CTA"><a href="https://www.123pan.com/s/1y1qVv-fRuY.html" class="btn btn-primary btn-shadow btn-gradient link-scroll">立即下载</a>
             <!-- <a href="#" class="btn btn-outline-primary">Sign Up Now</a> -->
             </div>
           </div>
