--- a/xdows安全/Dev/MDS.html
+++ b/xdows安全/Dev/MDS.html
@@ -97,7 +97,7 @@
                         <div class="d-item-title">winget++</div>
                         <div class="d-item-desc">winget工具</div>
                         <div class="d-item-desc">更方便使用winget</div>
-                        <div class="down-btn"><a href="./../Winget-Plus" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="down-btn"><a href="./../../../Winget-Plus" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
             </div>  
