--- a/Winget-Plus/index.html
+++ b/Winget-Plus/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Winget++ — 也许是最适合年轻人的 Winget 工具</title>
+    <title>Xdows Winget++ — 也许是最适合年轻人的 Winget 工具</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -29,7 +29,7 @@
   <body>
     <!-- navbar-->
     <header class="header">
-      <nav class="navbar navbar-expand-lg fixed-top"><a href="index.html" class="navbar-brand">Winget++</a>
+      <nav class="navbar navbar-expand-lg fixed-top"><a href="index.html" class="navbar-brand">Xdows Winget++</a>
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span></span><span></span><span></span></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto align-items-start align-items-lg-center">
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row d-flex">
           <div class="col-lg-6 text order-2 order-lg-1">
-            <h1>Winget++</h1>
+            <h1>Xdows Winget++</h1>
             <p class="hero-text">更方便使用 Winget</p>
             <div class="CTA"><a href="https://www.123pan.com/s/1y1qVv-fRuY.html" class="btn btn-primary btn-shadow btn-gradient link-scroll">立即下载</a>
             <!-- <a href="#" class="btn btn-outline-primary">Sign Up Now</a> -->
@@ -80,7 +80,7 @@
         <div id="myTab" role="tablist" class="nav nav-tabs">
           <div class="row">
           <h1></h1>
-            <div class="col-md-4"><a id="nav-first-tab" data-toggle="tab" role="tab" aria-controls="nav-first" aria-expanded="true" class="nav-item nav-link active"> <span class="number">1</span>一键安装Winget包，方便又简单</a></div>
+            <div class="col-md-4"><a id="nav-first-tab" data-toggle="tab" role="tab" aria-controls="nav-first" aria-expanded="true" class="nav-item nav-link active"> <span class="number">1</span>一键安装软件包，方便又简单</a></div>
             <div class="col-md-4"><a id="nav-second-tab" data-toggle="tab"  role="tab" aria-controls="nav-second" class="nav-item nav-link"> <span class="number">2</span>一键卸载软件，安全无残留</a></div>
             <div class="col-md-4"><a id="nav-third-tab" data-toggle="tab"  role="tab" aria-controls="nav-third" class="nav-item nav-link"> <span class="number">3</span>一键更新软件，快速又方便</a></div>
           </div>
