--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="button1">xdows4</a></li>
 <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="button2">xdows3</a></li>
 <li><a href="https://www.ccw.site/detail/63ef69bbc5dfca2199f97211" class="button3">XTYAI</a></li>
+<li><a href="./Winget-Plus" class="button4">Winget++</a></li>
 <li><a href="./xdows安全" class="button4">xdows 系列</a></li>
 </ul>
 
