--- a/Winget-Plus/index.html
+++ b/Winget-Plus/index.html
@@ -54,7 +54,7 @@
         <div class="row d-flex">
           <div class="col-lg-6 text order-2 order-lg-1">
             <h1>Xdows Winget++</h1>
-            <p class="hero-text">更方便使用 Winget</p>
+            <p class="hero-text">更方便使用 Winget 管理和安装软件包</p>
             <div class="CTA"><a href="https://www.123pan.com/s/1y1qVv-fRuY.html" class="btn btn-primary btn-shadow btn-gradient link-scroll">立即下载</a>
             <!-- <a href="#" class="btn btn-outline-primary">Sign Up Now</a> -->
             </div>
