--- a/Winget-Plus/index.html
+++ b/Winget-Plus/index.html
@@ -33,8 +33,10 @@
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span></span><span></span><span></span></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto align-items-start align-items-lg-center">
+            <li class="nav-item"><a href="#hero" class="nav-link link-scroll">主页</a></li>
             <li class="nav-item"><a href="#browser" class="nav-link link-scroll">功能</a></li>
             <li class="nav-item"><a href="#features" class="nav-link link-scroll">特点</a></li>
+            <li class="nav-item"><a href=".\..\" class="nav-link link-scroll">更多</a></li>
           </ul>
         </div>
       </nav>
