--- a/Winget-Plus/index.html
+++ b/Winget-Plus/index.html
@@ -82,7 +82,7 @@
         <div id="myTab" role="tablist" class="nav nav-tabs">
           <div class="row">
           <h1></h1>
-            <div class="col-md-4"><a id="nav-first-tab" data-toggle="tab" role="tab" aria-controls="nav-first" aria-expanded="true" class="nav-item nav-link active"> <span class="number">1</span>安装软件包，方便又简单</a></div>
+            <div class="col-md-4"><a id="nav-first-tab" data-toggle="tab" role="tab" aria-controls="nav-first" aria-expanded="true" class="nav-item nav-link active"> <span class="number">1</span>一键安装软件包，方便又简单</a></div>
             <div class="col-md-4"><a id="nav-second-tab" data-toggle="tab"  role="tab" aria-controls="nav-second" class="nav-item nav-link"> <span class="number">2</span>一键卸载软件，安全无残留</a></div>
             <div class="col-md-4"><a id="nav-third-tab" data-toggle="tab"  role="tab" aria-controls="nav-third" class="nav-item nav-link"> <span class="number">3</span>一键更新软件，快速又方便</a></div>
           </div>
