--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
   <title>XTY64XTY网站</title>
+  <meta name='description' content='这是 XTY64XTY 的个人网站，这里有着 XTY64XTY 的各平台的账号和项目。'>。
   <style>
     body {
       background-color: grey;
       background-size: cover;
-      font-family: '华康方圆体W7',sans-serif;
+      font-family: '华康方圆体W7'，sans-serif;
     }
 
 
