--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -56,6 +56,7 @@
                     <div class="newfunc-list">窗口内容区增加圆角</div>
                     <div class="newfunc-list">文件防护</div>
                     <div class="newfunc-list">病毒库更新</div>
+                    <div class="newfunc-list">垃圾清理（脚本）</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
