--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>2.07</title>
+    <title>3.01</title>
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -14,8 +14,46 @@
         <div class="version-list">
 
             <div class="version-item newest">
-                <div class="newversion">最新版本 3.00[项目重置]</div>
+                <div class="newversion">最新版本 3.01[项目重置]</div>
                 <div class="newfunc">
+                    <div class="newfunc">
+                    <div class="newversion">3.01</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">关于菜单使用列表框</div>
+                    <div class="newfunc-list">关于菜单增加反馈链接</div>
+                    <div class="newfunc-list">功能菜单增加建议链接</div>
+                    <div class="newfunc-list">修改UI</div>
+                    <div class="newfunc-list">增加深色模式</div>
+                    <div class="newfunc-list">窗口内容区增加圆角</div>
+                    <div class="newfunc-list">文件防护</div>
+                    <div class="newfunc-list">病毒库更新</div>
+                    <div class="newfunc-list">垃圾清理（脚本）</div>
+                    <div class="newfunc-list">插件系统</div>
+                    <div class="newfunc-list">若干小功能</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                </div>
+            </div>
+            <div class="history-version">
+                <div class="history-version-title">其它版本</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">3.02版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">3.02</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">若干小功能</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">3.00版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newversion">3.00</div>
                     <div class="newfunc-title">新功能：</div>
@@ -36,30 +74,6 @@
                     <div class="newfunc-list">未安装易语言用户主程序会发出弹窗提示关键库损坏（未修复）</div>
                     <div class="newfunc-list">部分用户主程序无法运行（未修复）</div>
                     <div class="newfunc-list">其他问题（已修复）</div>
-                </div>
-            </div>
-            <div class="history-version">
-                <div class="history-version-title">其它版本</div>
-            </div>
-            <div class="history-version-item">
-                <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">3.01版本<span class="arrow"></span></div>
-                <div class="history-version-item-content">
-                    <div class="newfunc">
-                    <div class="newversion">3.01</div>
-                    <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">关于菜单使用列表框</div>
-                    <div class="newfunc-list">关于菜单增加反馈链接</div>
-                    <div class="newfunc-list">功能菜单增加建议链接</div>
-                    <div class="newfunc-list">修改UI</div>
-                    <div class="newfunc-list">增加深色模式</div>
-                    <div class="newfunc-list">窗口内容区增加圆角</div>
-                    <div class="newfunc-list">文件防护</div>
-                    <div class="newfunc-list">病毒库更新</div>
-                    <div class="newfunc-list">垃圾清理（脚本）</div>
-                    <div class="newfunc-list">若干小功能</div>
-                    <div class="newfunc-title">Bugs：</div>
-                    <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
                 </div>
             </div>
