--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -32,6 +32,7 @@
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-list">报毒系统文件（已修复）</div>
                 </div>
             </div>
             <div class="history-version">
