--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -33,6 +33,7 @@
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-list">报毒系统文件（已修复）</div>
+                    <div class="newfunc-list">扫描带有特殊符号的文件会奔溃（已修复）</div>
                 </div>
             </div>
             <div class="history-version">
