--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -47,6 +47,7 @@
                     <div class="newversion">3.02</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">更新 Miniblink 版本到 4975.2311.15.0</div>
+                    <div class="newfunc-list">Kolo 云端扫描</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
