--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -50,6 +50,7 @@
                     <div class="newfunc-list">Kolo 云端扫描</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">扫描开始的时候不会清空列表框（已修复）</div>
                     <div class="newfunc-list">扫描MD5为“1CD9B8C14E373112D055B86F14CE422F”的文件会奔溃（已修复）</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
