--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -38,6 +38,8 @@
                     <div class="newfunc">
                     <div class="newversion">3.03</div>
                     <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">启发可设置</div>
+                    <div class="newfunc-list">增加功能设置中的组合框宽度</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
