--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       background-color: grey;
       background-size: cover;
-      font-family: '华康方圆体W7'，sans-serif;
+      font-family: '华康方圆体W7', sans-serif
     }
 
 
