--- a/Xdows-Service/renji.html
+++ b/Xdows-Service/renji.html
@@ -16,6 +16,7 @@
             if(res.ret === 0){
                 // alert(res.ticket)   // 票据
                 console.info('验证通过-----');
+                location.href = "https://www.example.com";
             }
         }
     </script>
