--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -39,6 +39,7 @@
                     <div class="newversion">3.03</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">启发可设置</div>
+                    <div class="newfunc-list">Kolo CDN 测速</div>
                     <div class="newfunc-list">增加功能设置中的组合框宽度</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
