--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -41,9 +41,11 @@
                     <div class="newfunc-list">启发可设置</div>
                     <div class="newfunc-list">Kolo CDN 测速</div>
                     <div class="newfunc-list">托盘图标</div>
+                    <div class="newfunc-list">系统修复</div>
                     <div class="newfunc-list">增加功能设置中的组合框宽度</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">文本错误（已修复）</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
                 </div>
