--- a/xdows安全/Dev/xigeaqUpdate.html
+++ b/xdows安全/Dev/xigeaqUpdate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>1.5</title>
+    <title>西格安全更新日志</title>
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -20,6 +20,7 @@
                     <div class="newversion">1.5</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">增加若干功能</div>
+                    <div class="newfunc-list">增加两个彩蛋</div>
                     <div class="newfunc-list">优化</div>
                 </div>
             </div>
