--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -50,6 +50,8 @@
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">文本错误（已修复）</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-title">注意：</div>
+                    <div class="newfunc-list">不再兼容西格安全</div>
                     </div>
                 </div>
             </div>
