--- a/xdows安全/Dev/xigeaqUpdate.html
+++ b/xdows安全/Dev/xigeaqUpdate.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>3.02</title>
+    <link rel="shortcut icon" href="./../img/logo.ico" >
+    <link rel="stylesheet" href="./../css/public.css">
+    <link rel="stylesheet" href="./../css/support.css">
+    <script src="./../../script.js"></script>
+</head>
+
+<body>
+<div class="version-list">
+            <div class="version-item newest">
+                <div class="newfunc"> 
+                        <div class="newfunc-title">公告</div>
+                        <div class="newfunc-list">西格安全软件更新日志不再提供</div>
+                        <div class="newfunc-list">感谢您的使用</div>
+                </div>
+            </div>
+ </div>
+
+
+
+</body>
