--- a/xdows安全/Dev/xigeaqUpdate.html
+++ b/xdows安全/Dev/xigeaqUpdate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>3.02</title>
+    <title>公告</title>
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -19,7 +19,4 @@
                 </div>
             </div>
  </div>
-
-
-
 </body>
