--- a/xdows安全/Dev/xigeaqUpdate.html
+++ b/xdows安全/Dev/xigeaqUpdate.html
@@ -15,7 +15,7 @@
                 <div class="newfunc"> 
                         <div class="newfunc-title">公告</div>
                         <div class="newfunc-list">西格安全软件更新日志不再提供</div>
-                        <div class="newfunc-list">感谢您的使用</div>
+                        <div class="newfunc-list">感谢您的使用，有缘再见</div>
                 </div>
             </div>
  </div>
