--- a/xdows安全/Dev/xigeaqUpdate.html
+++ b/xdows安全/Dev/xigeaqUpdate.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
     <script src="./../../script.js"></script>
+    <style type="text/css">
+    body {
+    font-size: larger;
+    }
+  </style>
 </head>
 
 <body>
