--- a/xdows安全/Dev/xigeaqUpdate.html
+++ b/xdows安全/Dev/xigeaqUpdate.html
@@ -1,27 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>公告</title>
-    <link rel="shortcut icon" href="./../img/logo.ico" >
-    <link rel="stylesheet" href="./../css/public.css">
-    <link rel="stylesheet" href="./../css/support.css">
-    <script src="./../../script.js"></script>
-    <style type="text/css">
-    body {
-    font-size: larger;
-    }
-  </style>
-</head>
-
-<body>
-<div class="version-list">
-            <div class="version-item newest">
-                <div class="newfunc"> 
-                        <div class="newfunc-title">公告</div>
-                        <div class="newfunc-list">西格安全软件更新日志不再提供</div>
-                        <div class="newfunc-list">感谢您的使用，有缘再见</div>
-                </div>
-            </div>
  </div>
 </body>
+<html>
+<head><title>公告</title></head>
+<body>
+<center><h1>公告</h1></center>
+<center><h1>西格安全软件更新日志不再提供</h1></center>
+<hr><center>感谢您的使用，有缘再见</center>
+</body>
+</html>
