--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -7,7 +7,7 @@
 .styled {
   border: 0;
   line-height: 2.5;
-  padding: 30 50px;
+  padding: 30 max-width-50px;
   font-size: 1rem;
   color: #000;
   border-radius: 10px;
