--- a/Xdows-Service/APP.html
+++ b/Xdows-Service/APP.html
@@ -7,8 +7,7 @@
 .styled {
   border: 0;
   line-height: 2.5;
-  margin-left: 10;
-  margin-right: 10;
+  height: 10px;
   font-size: 1rem;
   color: #000;
   border-radius: 10px;
