--- a/Xdows-Service/renji.html
+++ b/Xdows-Service/renji.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no,maximum-scale=1.0, minimum-scale=1.0">
     <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
 </head>
-<body>
+<body id="TencentCaptcha" data-appid="2068666293" data-cbfn="callback">
     <button id="TencentCaptcha" data-appid="2068666293" data-cbfn="callback" type="button">验证码</button>
     <script type="text/javascript">
         window.callback = function(res){
