--- a/Xdows-Service/renji.html
+++ b/Xdows-Service/renji.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>验证码</title>
-<h1>z请进行验证后继续</h1>
+<h2>请进行验证后继续</h2>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no,maximum-scale=1.0, minimum-scale=1.0">
     <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
