--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -49,6 +49,7 @@
                     <div class="newfunc-list">MD5查杀引擎</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">文件防护文件名显示错误（已修复）</div>
                     <div class="newfunc-list">文本错误（已修复）</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-title">注意：</div>
