--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -46,6 +46,7 @@
                     <div class="newfunc-list">托盘图标</div>
                     <div class="newfunc-list">系统修复</div>
                     <div class="newfunc-list">增加功能设置中的组合框宽度</div>
+                    <div class="newfunc-list">部分组件支持 Unicode</div>
                     <div class="newfunc-list">MD5查杀引擎</div>
                     <div class="newfunc-list">若干小功能</div>
                     <div class="newfunc-title">Bugs：</div>
