--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -50,6 +50,7 @@
                     <div class="newfunc-list">部分组件支持 Unicode</div>
                     <div class="newfunc-list">MD5查杀引擎</div>
                     <div class="newfunc-list">若干小功能</div>
+                    <div class="newfunc-list">个性化-背景模糊[Beta]</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">文件防护文件名显示错误（已修复）</div>
                     <div class="newfunc-list">文本错误（已修复）</div>
