--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -20,7 +20,7 @@
                     <div class="newversion">3.03</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">kolo可设置</div>
-                    <div class="newfunc-list">个性化：内容区圆角</div>
+                    <div class="newfunc-list">个性化-内容区圆角</div>
                     <div class="newfunc-list">启发可设置</div>
                     <div class="newfunc-list">插件系统更新</div>
                     <div class="newfunc-list">Kolo CDN 测速</div>
