--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -128,10 +128,10 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">2.08版本[因误操作文件被删除]<span class="arrow"></span></div>
+                <div class="history-version-item-title">2.08版本<span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newversion">2.08</div>
+                    <div class="newversion">2.08[因误操作文件被删除]</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化本地库扫描速度</div>
                     <div class="newfunc-list">更新“更新日志”网址</div>
