--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
 <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="button4">CCW</a></li>
 <li><a href="https://www.acfun.cn/u/74879115" class="button1">AcFun</a></li>
 </ul>
+<span id="finicount_views"></span>
     </div>
   </div>
 <script src="script.js"></script>
-
+<script async src="//finicounter.eu.org/finicounter.js"></script>
 </body>
 </html>
