--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="button4">CCW</a></li>
 <li><a href="https://www.acfun.cn/u/74879115" class="button1">AcFun</a></li>
 </ul>
-<span id="finicount_views"></span>
+  <h1>这个网站目前有<span id="finicount_views"></span>人访问</h1>
+
     </div>
   </div>
 <script src="script.js"></script>
