--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -53,6 +53,8 @@
                     <div class="newfunc-list">无</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-title">注意：</div>
+                    <div class="newfunc-list">不再兼容 ia 系列的所有产品</div>
                     </div>
                 </div>
             </div>
