--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -55,7 +55,8 @@
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-title">注意：</div>
-                    <div class="newfunc-list">不再兼容 ia 系列的所有产品</div>
+                    <div class="newfunc-list">不再兼容 RTC 杀毒</div>
+                    <div class="newfunc-list">兼容西格安全</div>
                     </div>
                 </div>
             </div>
