--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -52,6 +52,7 @@
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">部分文件改成只读</div>
                     <div class="newfunc-list">增加 CZK（为来）云扫描</div>
+                    <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-title">注意：</div>
