--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -51,6 +51,7 @@
                     <div class="newversion">3.04</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">部分文件改成只读</div>
+                    <div class="newfunc-list">部分 UI 调整</div>
                     <div class="newfunc-list">增加 CZK（为来）云扫描</div>
                     <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
                     <div class="newfunc-title">Bugs：</div>
