--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="button4">CCW</a></li>
 <li><a href="https://www.acfun.cn/u/74879115" class="button1">AcFun</a></li>
 </ul>
-<p style="color:white; font-size:30px; text-align:center;">这个网站目前有<span id="finicount_views"></span>人访问过</p>
+<p style="color:white; font-size:30px; text-align:center;">这个网站共有<span id="finicount_views"></span>人访问过</p>
 
     </div>
   </div>
