--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -50,6 +50,7 @@
                     <div class="newfunc">
                     <div class="newversion">3.04</div>
                     <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">运行日志</div>
                     <div class="newfunc-list">部分文件改成只读</div>
                     <div class="newfunc-list">主页更新</div>
                     <div class="newfunc-list">部分 UI 调整</div>
