--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -58,6 +58,7 @@
                     <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-list">删除文件后未更新索引（已修复）</div>
                     <div class="newfunc-title">注意：</div>
                     <div class="newfunc-list">不再兼容 RTC 杀毒</div>
                     <div class="newfunc-list">兼容西格安全</div>
