--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -52,6 +52,8 @@
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">运行日志</div>
                     <div class="newfunc-list">部分文件改成只读</div>
+                    <div class="newfunc-list">移除 360 云端扫描</div>
+                    <div class="newfunc-list">Xdows Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">主页更新</div>
                     <div class="newfunc-list">部分 UI 调整</div>
                     <div class="newfunc-list">增加 CZK（为来）云扫描</div>
