--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -55,6 +55,7 @@
                     <div class="newfunc-list">移除 360 云端扫描</div>
                     <div class="newfunc-list">Xdows Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">主页更新</div>
+                    <div class="newfunc-list">系统修复功能增强</div>
                     <div class="newfunc-list">部分 UI 调整</div>
                     <div class="newfunc-list">增加 CZK（为来）云扫描</div>
                     <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
