--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -60,6 +60,7 @@
                     <div class="newfunc-list">部分 UI 调整</div>
                     <div class="newfunc-list">增加 CZK（为来）云扫描</div>
                     <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
+                    <div class="newfunc-list">广告拦截</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-list">删除文件后未更新索引（已修复）</div>
