--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -53,6 +53,7 @@
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">运行日志</div>
                     <div class="newfunc-list">部分文件改成只读</div>
+                    <div class="newfunc-list">删除插件系统</div>
                     <div class="newfunc-list">移除 360 云端扫描</div>
                     <div class="newfunc-list">Xdows Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">主页更新</div>
