--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 
 <head>
-    <title>3.03</title>
+    <title>3.04</title>
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -14,8 +14,50 @@
         <div class="version-list">
 
             <div class="version-item newest">
-                <div class="newversion">最新版本 3.03</div>
+                <div class="newversion">最新版本 3.04</div>
                 <div class="newfunc">
+                    <div class="newfunc">
+                    <div class="newversion">3.04</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">运行日志</div>
+                    <div class="newfunc-list">部分文件改成只读</div>
+                    <div class="newfunc-list">删除插件系统</div>
+                    <div class="newfunc-list">移除 360 云端扫描</div>
+                    <div class="newfunc-list">Xdows Cloud 云端扫描引擎</div>
+                    <div class="newfunc-list">主页更新</div>
+                    <div class="newfunc-list">系统修复功能增强</div>
+                    <div class="newfunc-list">部分 UI 调整</div>
+                    <div class="newfunc-list">增加 CZK（为来）云扫描</div>
+                    <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
+                    <div class="newfunc-list">广告拦截</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    <div class="newfunc-list">删除文件后未更新索引（已修复）</div>
+                    <div class="newfunc-title">注意：</div>
+                    <div class="newfunc-list">不再兼容 RTC 杀毒</div>
+                    <div class="newfunc-list">兼容西格安全</div>
+                </div>
+            </div>
+            <div class="history-version">
+                <div class="history-version-title">其它版本</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">3.05版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">3.05[正在开发]</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">优化 UI</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">3.03版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
                     <div class="newfunc">
                     <div class="newversion">3.03</div>
                     <div class="newfunc-title">新功能：</div>
@@ -39,35 +81,6 @@
                     <div class="newfunc-list">已知问题（已修复）</div>
                     <div class="newfunc-title">注意：</div>
                     <div class="newfunc-list">不再兼容西格安全</div>
-                </div>
-            </div>
-            <div class="history-version">
-                <div class="history-version-title">其它版本</div>
-            </div>
-            <div class="history-version-item">
-                <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">3.04版本[正在开发]<span class="arrow"></span></div>
-                <div class="history-version-item-content">
-                    <div class="newfunc">
-                    <div class="newversion">3.04</div>
-                    <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">运行日志</div>
-                    <div class="newfunc-list">部分文件改成只读</div>
-                    <div class="newfunc-list">删除插件系统</div>
-                    <div class="newfunc-list">移除 360 云端扫描</div>
-                    <div class="newfunc-list">Xdows Cloud 云端扫描引擎</div>
-                    <div class="newfunc-list">主页更新</div>
-                    <div class="newfunc-list">系统修复功能增强</div>
-                    <div class="newfunc-list">部分 UI 调整</div>
-                    <div class="newfunc-list">增加 CZK（为来）云扫描</div>
-                    <div class="newfunc-list">Rua 文件粉碎（感谢 Xdows UI）</div>
-                    <div class="newfunc-list">广告拦截</div>
-                    <div class="newfunc-title">Bugs：</div>
-                    <div class="newfunc-list">已知问题（已修复）</div>
-                    <div class="newfunc-list">删除文件后未更新索引（已修复）</div>
-                    <div class="newfunc-title">注意：</div>
-                    <div class="newfunc-list">不再兼容 RTC 杀毒</div>
-                    <div class="newfunc-list">兼容西格安全</div>
                     </div>
                 </div>
             </div>
