--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -12,7 +12,7 @@
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./img/logo.ico" >
-    <title>xdows security-下载</title>
+    <title>Xdows Security-下载</title>
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/download.css">
     <script src="./../script.js"></script>
@@ -43,8 +43,8 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">支持 Windows 7 以上的设备</div>
-                        <div class="d-item-desc">使用下载器下载最新版</div>
-                        <div class="down-btn"><a href="./Dev/xdows安全.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="d-item-desc">使用直接下载最新版</div>
+                        <div class="down-btn"><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io/releases/download/v3.04/Xdows.Security.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>  
                  </div>
              </div>  
