--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -23,6 +23,7 @@
                     <div class="newfunc-list">部分文件改成只读</div>
                     <div class="newfunc-list">删除插件系统</div>
                     <div class="newfunc-list">移除 360 云端扫描</div>
+                    <div class="newfunc-list">MBR防护更新</div>
                     <div class="newfunc-list">Xdows Cloud 云端扫描引擎</div>
                     <div class="newfunc-list">主页更新</div>
                     <div class="newfunc-list">系统修复功能增强</div>
