--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -50,6 +50,7 @@
                     <div class="newversion">3.05[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化 UI</div>
+                    <div class="newfunc-list">Rua 文件粉碎 UI 更新</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">已知问题（已修复）</div>
                     </div>
