--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -20,7 +20,6 @@
                     <div class="newversion">3.04</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">运行日志</div>
-                    <div class="newfunc-list">部分文件改成只读</div>
                     <div class="newfunc-list">删除插件系统</div>
                     <div class="newfunc-list">移除 360 云端扫描</div>
                     <div class="newfunc-list">MBR防护更新</div>
@@ -50,6 +49,7 @@
                     <div class="newversion">3.05[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化 UI</div>
+                    <div class="newfunc-list">侧边栏非线性运动</div>
                     <div class="newfunc-list">Rua 文件粉碎 UI 更新</div>
                     <div class="newfunc-list">注册表修复增强</div>
                     <div class="newfunc-title">Bugs：</div>
