--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>XTY64XTY网站</title>
+<meta name="msvalidate.01" content="685017DE891CA904635634E99A83DFF1" />
   <meta name='description' content='这是 XTY64XTY 的个人网站，这里有着 XTY64XTY 的各平台的账号和项目。'>。
   <style>
     body {
