--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -49,6 +49,7 @@
                     <div class="newversion">3.05[正在开发]</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化 UI</div>
+                    <div class="newfunc-list">从托盘菜单中关闭软件</div>
                     <div class="newfunc-list">侧边栏非线性运动</div>
                     <div class="newfunc-list">Rua 文件粉碎 UI 更新</div>
                     <div class="newfunc-list">进程防护和文件防护将不会调用MD5扫描引擎</div>
